# NCSA-httpd-2.0

./: .gitignore  Makefile  README.md  config.h  config.status  configure.ac
src/: Makefile  Makefile.am  example.txt  httpd  httpd.h  httpd_main.c
src/.deps/: httpd.Po  httpd_main.Po  main.Po
test/: Makefile  Makefile.am  test_httpd  test_httpd.c
test/.deps/: test_httpd-test_httpd.Po
